# secret-sharing-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.local.json
.devcontainer/: devcontainer.json
init-scripts/: create-dynamo.sh
secret_sharing_api/: main.py
secret_sharing_api/models/: configs.py  data_service.py  dynamo.py  secret.py
secret_sharing_api/services/: config_service.py  data_service.py  dynamo_data_service.py  redis_data_service.py
src/: pyproject.toml
src/secret_sharing_api/: main.py
src/secret_sharing_api/models/: configs.py  create_secret.py  get_secret.py
src/secret_sharing_api/services/: config_service.py  dynamo_data_service.py
