[tool.poetry]
name = "secret-sharing-api"
version = "0.1.0"
description = ""
authors = ["Aakash Khanna <aakashkh13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
boto3 = "^1.24.2"
dotjson = "^0.1.2"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
